syntax = "proto3";
package tws.proto.task;

option java_package = "edu.iu.dsc.tws.proto.checkpoint";
option java_outer_classname = "Checkpoint";

//TaskDiscovery message is sent from the source and sink task to checkpoint manager
//when worker initiates.
message TaskDiscovery {
    int32 taskID = 1;
    TaskType taskType = 2;

    enum TaskType {
        SOURCE = 0;
        SINK = 1;
    }
}